squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-edge_cases-parent_scope.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
locals:
  - NamedReg: vargv
is_varargs: true
body:
  data:
    Block:
      - data:
          IfElse:
            - data:
                BinaryOp:
                  op: In
                  op_span:
                    start: Start
                    end: End
                  lhs:
                    data:
                      Literal:
                        String: a
                    span:
                      start: Start
                      end: End
                  rhs:
                    data: This
                    span:
                      start: Start
                      end: End
              span:
                start: Start
                end: End
            - data:
                Block:
                  - data:
                      Expr:
                        data:
                          FunctionCall:
                            func:
                              FieldAccess:
                                - data: Globals
                                  span:
                                    start: Start
                                    end: End
                                - - print
                                  - start: Start
                                    end: End
                            args:
                              - data:
                                  BinaryOp:
                                    op: Add
                                    op_span:
                                      start: Start
                                      end: End
                                    lhs:
                                      data:
                                        FunctionCall:
                                          func:
                                            FieldAccess:
                                              - data:
                                                  Ident: a
                                                span:
                                                  start: Start
                                                  end: End
                                              - - tostring
                                                - start: Start
                                                  end: End
                                          args: []
                                      span:
                                        start: Start
                                        end: End
                                    rhs:
                                      data:
                                        Literal:
                                          String: "\n"
                                      span:
                                        start: Start
                                        end: End
                                span:
                                  start: Start
                                  end: End
                        span:
                          start: Start
                          end: End
                    span:
                      start: Start
                      end: End
              span:
                start: Start
                end: End
            - data: Empty
              span:
                start: Start
                end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: print
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      Literal:
                        String: "root: "
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: print
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      FunctionCall:
                        func:
                          Expr:
                            data:
                              Ident: getroottable
                            span:
                              start: Start
                              end: End
                        args: []
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  Expr:
                    data:
                      Ident: assert
                    span:
                      start: Start
                      end: End
                args:
                  - data:
                      BinaryOp:
                        op: Eq
                        op_span:
                          start: Start
                          end: End
                        lhs:
                          data: This
                          span:
                            start: Start
                            end: End
                        rhs:
                          data:
                            FunctionCall:
                              func:
                                Expr:
                                  data:
                                    Ident: getroottable
                                  span:
                                    start: Start
                                    end: End
                              args: []
                          span:
                            start: Start
                            end: End
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
