squirrel_lang/src/parser/snapshots/squirrel_lang__parser__tests__parser-edge_cases-shadow_builtin.nut.snap
---
source: squirrel_lang/src/parser/mod.rs
expression: actual_ast
---
keyword_span:
  start: Start
  end: End
arg_span:
  start: Start
  end: End
num_args: 0
default_expr: []
local_names:
  - - vargv
    - 0
num_locals: 1
upvalues: []
is_varargs: true
body:
  data:
    Block:
      - data:
          Expr:
            data:
              Assign:
                target:
                  Ident:
                    - table
                    - start: Start
                      end: End
                value:
                  data:
                    TableDecl:
                      - - data:
                            Literal:
                              String: setdelegate
                          span:
                            start: Start
                            end: End
                        - data:
                            FunctionDef:
                              keyword_span:
                                start: Start
                                end: End
                              arg_span:
                                start: Start
                                end: End
                              num_args: 1
                              default_expr: []
                              local_names:
                                - - delegate
                                  - 0
                              num_locals: 1
                              upvalues: []
                              is_varargs: false
                              body:
                                data:
                                  Block:
                                    - data:
                                        Expr:
                                          data:
                                            FunctionCall:
                                              func:
                                                FieldAccess:
                                                  - data: Globals
                                                    span:
                                                      start: Start
                                                      end: End
                                                  - - print
                                                    - start: Start
                                                      end: End
                                              args:
                                                - data:
                                                    Literal:
                                                      String: "Just a test\n"
                                                  span:
                                                    start: Start
                                                    end: End
                                          span:
                                            start: Start
                                            end: End
                                      span:
                                        start: Start
                                        end: End
                                span:
                                  start: Start
                                  end: End
                          span:
                            start: Start
                            end: End
                  span:
                    start: Start
                    end: End
                kind: NewSlot
                op_span:
                  start: Start
                  end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
      - data:
          Expr:
            data:
              FunctionCall:
                func:
                  FieldAccess:
                    - data:
                        Ident: table
                      span:
                        start: Start
                        end: End
                    - - setdelegate
                      - start: Start
                        end: End
                args:
                  - data:
                      FunctionCall:
                        func:
                          Expr:
                            data:
                              Ident: getroottable
                            span:
                              start: Start
                              end: End
                        args: []
                    span:
                      start: Start
                      end: End
            span:
              start: Start
              end: End
        span:
          start: Start
          end: End
  span:
    start: Start
    end: End
